# songdatacore_rust

./: .gitignore  Cargo.toml  README.md  bmbfmod.json  build.ps1  build.rs  buildBMBF.ps1  cbindgen.toml  copy.ps1  create_bindings.ps1  qpm.json  rust-toolchain
.github/workflows/: rust-ci.yaml  rust-release.yml
cpp/: CMakeLists.txt  build.sh
cpp/src/: Main.cpp  Stopwatch.hpp
shared/: bindings.h  bindings.hpp  easybindings.hpp  patched_bindings.hpp
src/: lib.rs
src/beatstar/: data.rs  database.rs  ffi.rs  macros.rs  mod.rs  numstuff.rs
