[package]
name = "song_data_core_rust"
version = "0.1.0"
authors = ["FernTheDev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#For Http
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0" # HTTP/s
tokio = { version = "1", features = ["full"] }

cbindgen = "0.18.0" # For creating the C++ binding headers
serde = "1.0.125" # Parsing JSON
serde_json = "1.*" # Parsing JSON
chrono = "0.4" # Time library
stopwatch = "0.0.7" # I'm lazy

# Enum laziness
strum = "0.20"
strum_macros = "0.20"

lazy_static = "1.4.0"
once_cell = "1.7.2"

[lib]
crate-type = ["cdylib"]


[build-dependencies]
cbindgen = "0.18.0"

# If you want your Android docs to appear on docs.rs, add one of the Android
# triplets like this:
[package.metadata.docs.rs]
targets = ["aarch64-linux-android"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
