cargo-features = ["strip"]

[package]
name = "song_data_core_rust"
version = "0.1.0"
authors = ["FernTheDev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2.1.1", features = ["json"]} # For HTTP
tracing = "0.1"

# cbindgen = "0.20.0" # For creating the C++ binding headers
serde = "1.0.125" # Parsing JSON
serde_json = "1.*" # Parsing JSON
chrono = "0.4" # Time library
stopwatch = "0.0.7" # I'm lazy
zip = "0.5.13"
anyhow = "1.0"

# Enum laziness
strum = "0.21"
strum_macros = "0.21"

lazy_static = "1.4.0"
once_cell = "1.7.2"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = {git = "https://github.com/raftario/tracing-android.git"}

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = "0.2"

[build-dependencies]
cbindgen = "0.20.0"
cdylib-link-lines = "0.1"

# If you want your Android docs to appear on docs.rs, add one of the Android
# triplets like this:
[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"