[package]
name = "song_data_core_rust"
version = "0.1.0"
authors = ["FernTheDev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version = "2", features = ["json"]} # For HTTP
tracing = "0.1"

# cbindgen = "0.20.0" # For creating the C++ binding headers
# for API niceness
libc = "0.2"

serde = { version = "1.0", features = ["derive"] } # Parsing JSON
serde_json = "1.*" # Parsing JSON
chrono = "0.4" # Time library
stopwatch = "0.0.7" # I'm lazy
zip = "0.6"
anyhow = "1.0"

# Enum laziness
strum = "0.24"
strum_macros = "0.24"

lazy_static = "1.4.0"
once_cell = "1"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
paranoid-android = {git = "https://github.com/raftario/paranoid-android.git"}

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-subscriber = "0.3"

[build-dependencies]
cbindgen = "0.24.3"
cdylib-link-lines = "0.1"

# If you want your Android docs to appear on docs.rs, add one of the Android
# triplets like this:
[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"